[package]
name = "r1cs-zkinterface"
description = "zkinterface backend for the r1cs crate"
version = "0.1.2"
authors = ["Daniel Lubarov <daniel@mirprotocol.org>", "Brendan Farmer <brendan@mirprotocol.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/r1cs-zkinterface"
documentation = "https://docs.rs/r1cs-zkinterface"
keywords = ["R1CS", "cryptography", "SNARK"]
categories = ["cryptography"]
edition = "2018"

[dependencies]
num = { version = "0.2.0", features = ["rand"] }
r1cs = "0.4.7"
zkinterface = "1.0.6"
